# ddwill

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  bitbucket-pipelines.yml  build.gradle  gradle.properties
src/: main.rs
src/errors/: crypto_error.rs  mod.rs
src/main/java/com/calebpower/ddwill/: CLIParser.java  CryptOpRuntimeException.java  DDWill.java  DiskResource.java  FloatingParcel.java  Fragment.java  Key.java  Parcel.java  package-info.java
src/models/: canary.rs  deliverable.rs  fragment.rs  key.rs  meta.rs  mod.rs  payload.rs  shard.rs
src/test/java/com/calebpower/ddwill/: CLIParserTest.java  FragmentTest.java
src/test/resources/: testng.xml
src/test/resources/suites/: modelTestSuite.xml  uiTestSuite.xml
